src/clippercapi/cpp/clippercapi.h

typedef void Paths64;
CAPI int EndType_Joined(void);
CAPI int EndType_Butt(void);
CAPI int EndType_Square(void);
CAPI int EndType_Round(void);
CAPI Paths64* Paths64_New(void);
CAPI void Paths64_delete(Paths64* paths);
CAPI int Paths64_pathCount(Paths64* paths);
CAPI int Paths64_pathPointCount(Paths64* paths, int pathIndex);