src/main/java/com/loadingbyte/cinecred/natives/clippercapi/clippercapi_h.java


    /**
     * Address for:
     * {@snippet lang=c :
     * int EndType_Joined()
     * }
     */
    public static MemorySegment EndType_Joined$address() {
        return EndType_Joined.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int EndType_Joined()
     * }
     */
    public static int EndType_Joined() {
        var mh$ = EndType_Joined.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("EndType_Joined");
            }
            return (int)mh$.invokeExact();
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class EndType_Butt {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            clippercapi_h.C_INT    );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("EndType_Butt");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int EndType_Butt()
     * }
     */
    public static FunctionDescriptor EndType_Butt$descriptor() {
        return EndType_Butt.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int EndType_Butt()
     * }
     */
    public static MethodHandle EndType_Butt$handle() {
        return EndType_Butt.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int EndType_Butt()
     * }
     */
    public static MemorySegment EndType_Butt$address() {
        return EndType_Butt.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int EndType_Butt()
     * }
     */
    public static int EndType_Butt() {
        var mh$ = EndType_Butt.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("EndType_Butt");
            }
            return (int)mh$.invokeExact();
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class EndType_Square {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            clippercapi_h.C_INT    );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("EndType_Square");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int EndType_Square()
     * }
     */
    public static FunctionDescriptor EndType_Square$descriptor() {
        return EndType_Square.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int EndType_Square()
     * }
     */
    public static MethodHandle EndType_Square$handle() {
        return EndType_Square.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int EndType_Square()
     * }
     */
    public static MemorySegment EndType_Square$address() {
        return EndType_Square.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int EndType_Square()
     * }
     */
    public static int EndType_Square() {
        var mh$ = EndType_Square.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("EndType_Square");
            }
            return (int)mh$.invokeExact();
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class EndType_Round {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            clippercapi_h.C_INT    );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("EndType_Round");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int EndType_Round()
     * }
     */
    public static FunctionDescriptor EndType_Round$descriptor() {
        return EndType_Round.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int EndType_Round()
     * }
     */
    public static MethodHandle EndType_Round$handle() {
        return EndType_Round.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int EndType_Round()
     * }
     */
    public static MemorySegment EndType_Round$address() {
        return EndType_Round.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int EndType_Round()
     * }
     */
    public static int EndType_Round() {
        var mh$ = EndType_Round.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("EndType_Round");
            }
            return (int)mh$.invokeExact();
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class Paths64_New {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            clippercapi_h.C_POINTER    );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("Paths64_New");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * Paths64 *Paths64_New()
     * }
     */
    public static FunctionDescriptor Paths64_New$descriptor() {
        return Paths64_New.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * Paths64 *Paths64_New()
     * }
     */
    public static MethodHandle Paths64_New$handle() {
        return Paths64_New.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * Paths64 *Paths64_New()
     * }
     */
    public static MemorySegment Paths64_New$address() {
        return Paths64_New.ADDR;
    }

    /**
     * {@snippet lang=c :
     * Paths64 *Paths64_New()
     * }
     */
    public static MemorySegment Paths64_New() {
        var mh$ = Paths64_New.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("Paths64_New");
            }
            return (MemorySegment)mh$.invokeExact();
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class Paths64_delete {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            clippercapi_h.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("Paths64_delete");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * void Paths64_delete(Paths64 *paths)
     * }
     */
    public static FunctionDescriptor Paths64_delete$descriptor() {
        return Paths64_delete.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * void Paths64_delete(Paths64 *paths)
     * }
     */
    public static MethodHandle Paths64_delete$handle() {
        return Paths64_delete.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * void Paths64_delete(Paths64 *paths)
     * }
     */
    public static MemorySegment Paths64_delete$address() {
        return Paths64_delete.ADDR;
    }

    /**
     * {@snippet lang=c :
     * void Paths64_delete(Paths64 *paths)
     * }
     */
    public static void Paths64_delete(MemorySegment paths) {
        var mh$ = Paths64_delete.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("Paths64_delete", paths);
            }
            mh$.invokeExact(paths);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class Paths64_pathCount {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            clippercapi_h.C_INT,
            clippercapi_h.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("Paths64_pathCount");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int Paths64_pathCount(Paths64 *paths)
     * }
     */
    public static FunctionDescriptor Paths64_pathCount$descriptor() {
        return Paths64_pathCount.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int Paths64_pathCount(Paths64 *paths)
     * }
     */
    public static MethodHandle Paths64_pathCount$handle() {
        return Paths64_pathCount.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int Paths64_pathCount(Paths64 *paths)
     * }
     */
    public static MemorySegment Paths64_pathCount$address() {
        return Paths64_pathCount.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int Paths64_pathCount(Paths64 *paths)
     * }
     */
    public static int Paths64_pathCount(MemorySegment paths) {
        var mh$ = Paths64_pathCount.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("Paths64_pathCount", paths);
            }
            return (int)mh$.invokeExact(paths);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class Paths64_pathPointCount {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            clippercapi_h.C_INT,
            clippercapi_h.C_POINTER,
            clippercapi_h.C_INT
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("Paths64_pathPointCount");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int Paths64_pathPointCount(Paths64 *paths, int pathIndex)
     * }
     */
    public static FunctionDescriptor Paths64_pathPointCount$descriptor() {
        return Paths64_pathPointCount.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int Paths64_pathPointCount(Paths64 *paths, int pathIndex)
     * }
     */
    public static MethodHandle Paths64_pathPointCount$handle() {
        return Paths64_pathPointCount.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int Paths64_pathPointCount(Paths64 *paths, int pathIndex)
     * }
     */
    public static MemorySegment Paths64_pathPointCount$address() {
        return Paths64_pathPointCount.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int Paths64_pathPointCount(Paths64 *paths, int pathIndex)
     * }
     */
    public static int Paths64_pathPointCount(MemorySegment paths, int pathIndex) {
        var mh$ = Paths64_pathPointCount.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("Paths64_pathPointCount", paths, pathIndex);
            }
            return (int)mh$.invokeExact(paths, pathIndex);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }
